fix properties
